# tee_openenclave

./: .check-license.ignore  CHANGELOG.md  CMakeLists.txt
api/: annotated.html  classes.html  enclave_8h_a63fd9cb689eadff33a3654bbc4b4fa57.html  globals.html  globals_func.html  globals_type.html  host_8h.html  host_8h_a121289284f9d397e326b13a012871a86.html  host_8h_a1b84be6ebcd25545523e6e601eaa31ac.html  host_8h_a373a94cb9d2152c453a8c71e3d607e3f.html  host_8h_a49a8df764b9a46fbe7bcd092e2417277.html  host_8h_a5187dc184c8a2b908c56f9249a8f02e5.html  host_8h_a6574eb251480c271401e34c0757ff04f.html  host_8h_a6e5696d3d641e4f23e78cbb35573a5b0.html  host_8h_a74aebc5490b8922fc5cd69d1cc4994a5.html  host_8h_aad4077bd49ee0911ee7d0e0287fdc082.html  host_8h_aba631c49992c0f8415b68b90a95c14fb.html  host_8h_acd119f88c4005f9c130f6f78b9ae43e0.html  host_8h_adb1efb2eabdc5ad3c47947eb9ede5cd3.html  host_8h_aefa2975824b98555d061ba66e92a0627.html  host_8h_source.html  struct__oe__ecall__info__t.html  types_8h.html  types_8h_acb9a002e429e9071300cbcf31f388689.html  types_8h_ade811d495805a2e563e2b5f921b3aad7.html  verifier_8h_a5ad1a6314d2fe5b3470cb3a25c4c39df.html  verifier_8h_source.html
cmake/: compiler_settings.cmake
common/: gen-edl.sh  hostsock.edl  oe.edl  oe_args.h  oe_host_stdlib.h  oe_host_string.h  oe_t.c  oe_t.h  oe_u.c  oe_u.h  polling.edl  posix.edl  resolve.edl  signal.edl
device/: CMakeLists.txt
docs/: LibcSupport.md
enclave/: CMakeLists.txt  tls.c  tlsverifiere.c
libc/: getnameinfo.c  (+1 more)
tests/deepcopy/enc/: CMakeLists.txt  enc.c
tests/deepcopy/host/: CMakeLists.txt  host.c
(+148 files in other folders)
